--- a/src/pages/en/guides/cms/contentful.mdx
+++ b/src/pages/en/guides/cms/contentful.mdx
@@ -309,11 +309,11 @@ const posts = entries.items.map((item) => {
     <ul>
       {posts.map((post) => (
         <li>
-          <a href={`/posts/${slug}/`}>
-            <h2>{title}</h2>
+          <a href={`/posts/${post.slug}/`}>
+            <h2>{post.title}</h2>
           </a>
-          <time>{date}</time>
-          <p>{description}</p>
+          <time>{post.date}</time>
+          <p>{post.description}</p>
         </li>
       ))}
     </ul>
