Corrected "import" to "use"
Style-script bleed does not occur if component is only imported and not used.
It does occur if component is imported and used but not rendered (or maybe better "appears in the output", since it could be physically in the output HTML but `display:none` ).

--- a/src/pages/en/guides/troubleshooting.mdx
+++ b/src/pages/en/guides/troubleshooting.mdx
@@ -139,7 +139,7 @@ In Astro, using a `<head>` tag works like any other HTML tag: it does not get mo
 
 ### An unwanted `<script>` or `<style>` is included
 
-Astro's build process works on the module graph: this means that once a component is imported, its `<script>` and `<style>` tags are processed, optimized, and bundled, whether it is rendered or not (or used at all!). This does not apply if the `is:inline` directive is applied. 
+Astro's build process works on the module graph: this means that once a component is used, its `<script>` and `<style>` tags are processed, optimized, and bundled, whether it is rendered or not. This does not apply if the `is:inline` directive is applied. 
 
 ## Tips and tricks
 
