i18n(zh-cn): Update migrate-to-astro

--- a/src/pages/zh-cn/guides/migrate-to-astro.mdx
+++ b/src/pages/zh-cn/guides/migrate-to-astro.mdx
@@ -24,7 +24,7 @@ Astro 提供了许多好处: 性能，简单性，以及许多你想要的功能
 
 - 在 Astro 中直接使用你现有的 [UI 框架组件](/zh-cn/core-concepts/framework-components/) 。
 
-- 使用你现有的 [CSS 样式或库](/zh-cn/guides/styling/) 包括 Taliwind。 
+- 使用你现有的 [CSS 样式或库](/zh-cn/guides/styling/) 包括 Tailwind。 
 
 - 使用你现有的 [Markdown/MDX 文件](/zh-cn/guides/markdown-content/)， 以及 [remark 和 rehype 插件](/zh-cn/guides/markdown-content/#配置-markdown)进行配置。
 
