--- a/src/pages/en/guides/deploy/github.mdx
+++ b/src/pages/en/guides/deploy/github.mdx
@@ -95,7 +95,7 @@ Astro maintains the official `withastro/action` to deploy your project with very
 
 3. On GitHub, go to your repository’s **Settings** tab and find the **Pages** section of the settings.
 
-4. Choose **GitHub Actions** as the **Source** of your site and press **Save**.  
+4. Choose **GitHub Actions** as the **Source** of your site.  
 
 5. Commit the new workflow file and push it to GitHub.  
 
