ci: update integration docs

--- a/src/pages/en/guides/integrations-guide/mdx.mdx
+++ b/src/pages/en/guides/integrations-guide/mdx.mdx
@@ -56,7 +56,7 @@ Then, apply this integration to your `astro.config.*` file using the `integratio
 
 **`astro.config.mjs`**
 
-```js
+```js ins={2} "mdx()"
 import { defineConfig } from 'astro/config';
 import mdx from '@astrojs/mdx';
 
@@ -104,8 +104,9 @@ All [`markdown` configuration options](/en/reference/configuration-reference/#ma
 There is no separate MDX configuration for [including pages marked as draft in the build](/en/reference/configuration-reference/#markdowndrafts). This Markdown setting will be respected by both Markdown and MDX files and cannot be overridden for MDX files specifically.
 :::
 
-```ts
-// astro.config.mjs
+**`astro.config.mjs`**
+
+```js
 import { defineConfig } from 'astro/config';
 import mdx from '@astrojs/mdx';
 import remarkToc from 'remark-toc';
@@ -140,8 +141,9 @@ MDX will extend [your project's existing Markdown configuration](/en/reference/c
 
 For example, say you need to disable GitHub-Flavored Markdown and apply a different set of remark plugins for MDX files. You can apply these options like so, with `extendMarkdownConfig` enabled by default:
 
-```ts
-// astro.config.mjs
+**`astro.config.mjs`**
+
+```js
 import { defineConfig } from 'astro/config';
 import mdx from '@astrojs/mdx';
 
@@ -167,8 +169,9 @@ export default defineConfig({
 
 You may also need to disable `markdown` config extension in MDX. For this, set `extendMarkdownConfig` to `false`:
 
-```ts
-// astro.config.mjs
+**`astro.config.mjs`**
+
+```js
 import { defineConfig } from 'astro/config';
 import mdx from '@astrojs/mdx';
 
