Update `testing.mdx` to most recent changes

--- a/src/pages/pt-br/guides/testing.mdx
+++ b/src/pages/pt-br/guides/testing.mdx
@@ -55,7 +55,7 @@ Como alternativa, você pode instalar o Playwright dentro do seu projeto Astro u
 <html lang="pt-BR">
   <head>
     <title>Astro é incrível!</title>
-    <meta name='description' content="Extraia conteúdo de qualquer lugar e sirva-o rapidamente com a arquitetura em ilhas de última geração do Astro." />
+    <meta name="description" content="Extraia conteúdo de qualquer lugar e sirva-o rapidamente com a arquitetura em ilhas de última geração do Astro." />
   </head>
   <body></body>
 </html>
