i18n(pt-BR): Update deploy pages & `api-reference.mdx`

--- a/src/pages/pt-br/guides/deploy/gitlab.mdx
+++ b/src/pages/pt-br/guides/deploy/gitlab.mdx
@@ -35,7 +35,7 @@ Veja o [exemplo oficial de um projeto Astro no GitLab Pages](https://gitlab.com/
 
    ```yaml
    # A imagem do Docker que será utilizada para a build da sua aplicação
-   image: node:14
+   image: node:lts
 
    pages:
      cache:
