--- a/src/pages/pt-br/guides/deploy/kinsta.mdx
+++ b/src/pages/pt-br/guides/deploy/kinsta.mdx
@@ -19,7 +19,7 @@ Para hospedar seu projeto na **Kinsta Application Hosting**, você precisa de:
 - Instalar o pacote [`serve`](https://www.npmjs.com/package/serve) e definir o script `start` como `serve dist/`.
 
 Aqui estão as linhas necessárias no seu arquivo `package.json`:
-```json title="astro.config.mjs" {2,6} ins={12} "serv dist/"
+```json title="package.json" {2,6} ins={12} "serv dist/"
 {
   "name": "qualquerUm", // Isso é obrigatório, mas o valor não importa.
   "scripts": {
