--- a/src/pages/pt-br/reference/errors/config-not-found.mdx
+++ b/src/pages/pt-br/reference/errors/config-not-found.mdx
@@ -12,6 +12,6 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
 O arquivo de configuração especificado utilizando `--config` não pôde ser encontrado. Certfiique-se de que ele existe ou de que o caminho está correto.
 
 **Veja Também:**
--  [--config](/pt-br/reference/cli-reference/#--config-path)
+- [--config](/pt-br/reference/cli-reference/#--config-caminho)
 
 
