--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -452,9 +452,9 @@ const { Content } = await entry.render();
 </MarkdownPostLayout>
 ```
 
-:::note
-In this example, we provided the layout for our posts in the dynamic route, but you can provide it individually in a post's frontmatter instead:
-```md title="src/content/post-1.md" add={2}
+Note that we wrapped the content in a layout in the the dynamic route. 
+This lets us remove the `layout` definition in each post's frontmatter:
+```md title="src/content/post-1.md" del={2}
 ---
 layout: ../../layouts/MarkdownPostLayout.astro
 title: 'My First Blog Post'
@@ -462,8 +462,6 @@ pubDate: 2022-07-01
 ...
 ---
 ```
-This works whether or not you define a `layout` property in the schema.
-:::
 
 5. To fetch your content, use [`getCollection`](/en/reference/api-reference/#getcollection) or [`getEntryBySlug`](/en/reference/api-reference/#getentrybyslug) instead of `Astro.glob` or `import` statements. For example, our unique tags logic becomes:
 
