--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -487,7 +487,30 @@ export async function getStaticPaths() {
 When used to fetch Markdown files, `Astro.glob` returns objects with a `frontmatter` property. Instead, `getCollection` and `getEntryBySlug` provide this frontmatter data on the `data` property.
 :::
 
-For a full example of migrating the blog tutorial to content collections, see the [Content Collections branch](https://github.com/withastro/blog-tutorial-demo/tree/content-collections) of the tutorial repo.
+Our RSS route must also use `getCollection`:
+
+```js title="src/pages/rss.xml.js" {5, 10-15} 
+import rss from "@astrojs/rss";
+import { getCollection } from "astro:content";
+
+export async function get() {
+  const posts = await getCollection('posts');
+  return rss({
+    title: 'Astro Learner | Blog',
+    description: 'My journey learning Astro',
+    site: 'https://my-blog-site.netlify.app',
+    items: posts.map((post) => ({
+      title: post.data.title,
+      pubDate: post.data.pubDate,
+      description: post.data.description,
+      link: `/posts/${post.slug}/`,
+    })),
+    customData: `<language>en-us</language>`,
+  });
+}
+```
+
+For the full example of the blog tutorial using content collections, see the [Content Collections branch](https://github.com/withastro/blog-tutorial-demo/tree/content-collections) of the tutorial repo.
 
 
 ## Modifying Frontmatter with Remark
