remove extra 'the'

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -452,7 +452,7 @@ const { Content } = await entry.render();
 </MarkdownPostLayout>
 ```
 
-Note that we wrapped the content in a layout in the the dynamic route. 
+Note that we wrapped the content in a layout in the dynamic route. 
 This lets us remove the `layout` definition in each post's frontmatter:
 ```md title="src/content/post-1.md" del={2}
 ---
