i18n(zh-cn): Miscrosoft -> Microsoft

--- a/src/pages/zh-cn/editor-setup.mdx
+++ b/src/pages/zh-cn/editor-setup.mdx
@@ -11,7 +11,7 @@ import Badge from '~/components/Badge.astro';
 
 ## VS Code
 
-[VS Code](https://code.visualstudio.com) 是由 Miscrosoft 构建，受网页开发者欢迎的代码编辑器。VS Code 引擎还对云端代码编辑器像 [GitHub Codespaces](https://github.com/features/codespaces) 和 [Gitpod](https://gitpod.io) 提供了支持。
+[VS Code](https://code.visualstudio.com) 是由 Microsoft 构建，受网页开发者欢迎的代码编辑器。VS Code 引擎还对云端代码编辑器像 [GitHub Codespaces](https://github.com/features/codespaces) 和 [Gitpod](https://gitpod.io) 提供了支持。
 
 Astro 可以和任意编辑器一同工作。不过我们推荐在 Astro 项目中使用 VS Code。我们维护着一个官方 [Astro VS Code 扩展](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode)，为 Astro 项目提供了几个关键特性并改善开发者体验。
 
