--- a/src/pages/zh-cn/guides/environment-variables.mdx
+++ b/src/pages/zh-cn/guides/environment-variables.mdx
@@ -52,7 +52,7 @@ PUBLIC_POKEAPI="https://pokeapi.co/api/v2"
 
 ## 获取环境变量
 
-在 Vite 中，你可以使用 `process.env`，而不是使用 `import.meta.env`，它使用了 ES2020 中添加的 `import.meta` 功能。
+在 Vite 中，你可以使用 `import.meta.env`，而不是使用 `process.env`，它使用了 ES2020 中添加的 `import.meta` 功能。
 
 :::tip[不用担心浏览器支持]
 Vite 将用静态值替换所有 `import.meta.env` 内容。
