--- a/src/pages/en/guides/cms/netlify-cms.mdx
+++ b/src/pages/en/guides/cms/netlify-cms.mdx
@@ -15,6 +15,8 @@ service: Netlify CMS
 
 - Blog Post: [Author your Astro site's content with Git-based CMSs](https://aalam.vercel.app/blog/astro-and-git-cms-netlify) by Aftab Alam 
 
+- Youtube Tutorial: [Create a Custom Blog with Astro & NetlifyCMS in MINUTES!](https://www.youtube.com/watch?v=3yip2wSRX_4) by Kumail Pirzada
+
 ## Production Sites
 
 The following sites use Astro + Netlify CMS in production:
