--- a/src/pages/zh-cn/core-concepts/sharing-state.mdx
+++ b/src/pages/zh-cn/core-concepts/sharing-state.mdx
@@ -60,7 +60,7 @@ import { createSignal } from 'solid-js';
 
 export const sharedCount = createSignal(0);
 ```
-...所有导入了 `sharedCount` 的组件都会共享共同的状态。 虽然这很好用，但是你可能更喜欢 Nano Stsores 如果：
+...所有导入了 `sharedCount` 的组件都会共享共同的状态。 虽然这很好用，但是你可能更喜欢 Nano Stores 如果：
 a） 你喜欢他们的插件 ["objects"](https://github.com/nanostores/nanostores#maps) 和 [async state](https://github.com/nanostores/nanostores#lazy-stores)。
 b） 你想要在 Svelte 和其他UI框架如 Preact 或者 Vue 之间进行通信。
 </details>
