--- a/src/pages/es/guides/deploy/github.mdx
+++ b/src/pages/es/guides/deploy/github.mdx
@@ -95,7 +95,7 @@ Astro mantiene la acción oficial `withastro/action` para desplegar tu proyecto 
 
 3. En GitHub, ve a la pestaña **Settings** de tu repositorio y busca la sección **Pages**.
 
-4. Elige **GitHub Actions** como el **Source** de tu proyecto y presiona **Save**.  
+4. Elige **GitHub Actions** como el **Source** de tu proyecto.  
 
 5. Has *commit* del nuevo archivo workflow y has *push* a GitHub. 
 
