--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -234,7 +234,7 @@ defineCollection({
 
 ### Defining custom slugs
 
-Every content entry generates a URL-friendly `slug` property from its file `id`. The file `id` is simply the filename including its extension (`.md` or `.mdx`), but the extension is stripped for the slug. The slug is used to query the entry directly from your collection. It is also useful when creating new pages and URLs from your content.
+Every content entry generates a URL-friendly `slug` property from its [file `id`](/en/reference/api-reference/#id). The slug is used to query the entry directly from your collection. It is also useful when creating new pages and URLs from your content.
 
 You can override an entry's generated slug by adding your own `slug` property to the file frontmatter. This is similar to the "permalink" feature of other web frameworks. `"slug"` is a special, reserved property name that is not allowed in your custom collection `schema` and will not appear in your entry's `data` property. 
 
