--- a/src/pages/en/guides/troubleshooting.mdx
+++ b/src/pages/en/guides/troubleshooting.mdx
@@ -137,9 +137,9 @@ nodeLinker: "node-modules"
 
 In Astro, using a `<head>` tag works like any other HTML tag: it does not get moved to the top of the page or merged with the existing `<head>`. Because of this, you usually only want to include one `<head>` tag throughout a page. We recommend writing that single `<head>` and its contents in a [layout component](/en/core-concepts/layouts/).
 
-### An unwanted `<script>` or `<style>` is included
+### An unexpected `<script>` or `<style>` is included
 
-Astro's build process works on the module graph: this means that once a component is used, its `<script>` and `<style>` tags are processed, optimized, and bundled, whether it is rendered or not. This does not apply if the `is:inline` directive is applied. 
+Astro's build process works on the module graph: once a component is evaluated, its `<script>` and `<style>` tags are processed, optimized, and bundled, whether it appears in the final output or not (e.g. when [conditionally rendered](https://docs.astro.build/en/core-concepts/astro-components/#dynamic-html) components are not displayed). This does not apply to scripts when the `is:inline` directive is applied.
 
 ## Tips and tricks
 
