Add note about prerendering MDX files

--- a/src/pages/en/guides/server-side-rendering.mdx
+++ b/src/pages/en/guides/server-side-rendering.mdx
@@ -105,7 +105,7 @@ Astro will remain a static-site generator by default. But once you enable a serv
 
 <Since v="2.0.0" />
 
-To enable **hybrid rendering**, any [page](/en/core-concepts/astro-pages/) or [server endpoint](/en/core-concepts/endpoints/#server-endpoints-api-routes) can opt-in to prerendering. These files will be statically rendered at build-time, similar to the default static [`output`](/en/reference/configuration-reference/#output) mode.
+To enable **hybrid rendering**, any [`.astro` page](/en/core-concepts/astro-pages/) or [server endpoint](/en/core-concepts/endpoints/#server-endpoints-api-routes) can opt-in to prerendering. These files will be statically rendered at build-time, similar to the default static [`output`](/en/reference/configuration-reference/#output) mode.
 
 ```astro title="src/pages/index.astro" {2}
 ---
@@ -116,6 +116,20 @@ export const prerender = true;
   <!-- Page here... -->
 </html>
 ```
+
+[MDX pages](/en/guides/markdown-content/#using-exported-variables-in-mdx) can also be prerendered:
+
+```astro title="src/pages/markdown.mdx" {2}
+---
+layout: '../layouts/markdown.astro'
+title: 'My page'
+---
+export const prerender = true;
+
+# This is my page
+```
+
+Plain `.md` Markdown pages do not support exporting variables, and so must be converted to `.mdx` before they can be prerendered.
 
 ### `Astro.request.headers`
 
