--- a/src/pages/en/guides/troubleshooting.mdx
+++ b/src/pages/en/guides/troubleshooting.mdx
@@ -139,7 +139,7 @@ In Astro, using a `<head>` tag works like any other HTML tag: it does not get mo
 
 ### An unexpected `<script>` or `<style>` is included
 
-Astro's build process works on the module graph: once a component is evaluated, its `<script>` and `<style>` tags are processed, optimized, and bundled, whether it appears in the final output or not (e.g. when [conditionally rendered](https://docs.astro.build/en/core-concepts/astro-components/#dynamic-html) components are not displayed). This does not apply to scripts when the `is:inline` directive is applied.
+Astro's build process works on the module graph: once a component is included in the template, its `<script>` and `<style>` tags are processed, optimized, and bundled, whether it appears in the final output or not (e.g. when [conditionally rendered](https://docs.astro.build/en/core-concepts/astro-components/#dynamic-html) components are not displayed). This does not apply to scripts when the `is:inline` directive is applied.
 
 ## Tips and tricks
 
