expand into step

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -452,8 +452,8 @@ const { Content } = await entry.render();
 </MarkdownPostLayout>
 ```
 
-Note that we wrapped the content in a layout in the dynamic route. 
-This lets us remove the `layout` definition in each post's frontmatter:
+5. Since we wrapped the content in a layout in the dynamic route, remove the `layout` definition in each post's frontmatter.
+
 ```md title="src/content/post-1.md" del={2}
 ---
 layout: ../../layouts/MarkdownPostLayout.astro
@@ -463,7 +463,7 @@ pubDate: 2022-07-01
 ---
 ```
 
-5. To fetch your content, use [`getCollection`](/en/reference/api-reference/#getcollection) or [`getEntryBySlug`](/en/reference/api-reference/#getentrybyslug) instead of `Astro.glob` or `import` statements. For example, our unique tags logic becomes:
+6. To fetch your content, use [`getCollection`](/en/reference/api-reference/#getcollection) or [`getEntryBySlug`](/en/reference/api-reference/#getentrybyslug) instead of `Astro.glob` or `import` statements. For example, our unique tags logic becomes:
 
 ```js title="src/pages/tags/[tag].astro" "post.data" "getCollection(\"posts\")"
 ...
