--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -399,9 +399,11 @@ const { Content } = await entry.render();
 ## Migrating from File-Based Routing 
 If your existing site uses [file-based routing](/en/core-concepts/astro-pages/#markdownmdx-pages) with Markdown files in the `src/pages` folder, you may want to migrate to content collections. This gives you the benefit of type-safe frontmatter, but requires you to set up routing yourself. This guide uses the result of the [Build a Blog tutorial](/en/tutorial/0-introduction/) as an example starting point.
 
-1. [Upgrade](/en/guides/upgrade-to/v2/) to Astro v2.0 or later and [set up TypeScript](/en/guides/content-collections/#setting-up-typescript) for content collections.
-2. Move Markdown and MDX pages from `src/pages` to subdirectories of `src/content`. Each subdirectory represents a content type. For example, to migrate the [blog posts in the tutorial](/en/tutorial/2-pages/2/), move the contents of `src/pages/posts` to `src/content/posts`. 
-3. Create a `src/content/config.ts` file and [define a schema](/en/guides/content-collections/#defining-a-collection-schema) for each content type. For the blog, we only have one content type, `posts`:
+1. [Upgrade](/en/guides/upgrade-to/v2/) to Astro v2.0 or later, and upgrade all integrations to their latest versions. 
+
+2. [Set up TypeScript](/en/guides/content-collections/#setting-up-typescript) for content collections.
+3. Move Markdown and MDX pages from `src/pages` to subdirectories of `src/content`. Each subdirectory represents a content type. For example, to migrate the [blog posts in the tutorial](/en/tutorial/2-pages/2/), move the contents of `src/pages/posts` to `src/content/posts`. 
+4. Create a `src/content/config.ts` file and [define a schema](/en/guides/content-collections/#defining-a-collection-schema) for each content type. For the blog, we only have one content type, `posts`:
 
 ```ts title="src/content/config.ts"
 // Import utilities from `astro:content`
@@ -430,7 +432,7 @@ export const collections = {
 If your editor doesn't recognize `astro:content`, make sure you're on the latest version of Astro and try restarting the dev server. 
 :::
 
-4. To [generate routes](/en/guides/content-collections/#generating-routes-from-content), create a `.astro` page with a [dynamic route](/en/core-concepts/routing/#dynamic-routes) in `src/pages/posts` to [query and render your content](#querying-collections). Our tutorial blog uses the static output mode, so we'll use `getStaticPaths()` to create a route for each post:
+5. To [generate routes](/en/guides/content-collections/#generating-routes-from-content), create a `.astro` page with a [dynamic route](/en/core-concepts/routing/#dynamic-routes) in `src/pages/posts` to [query and render your content](#querying-collections). Our tutorial blog uses the static output mode, so we'll use `getStaticPaths()` to create a route for each post:
 
 ```astro title="src/pages/posts/[...slug].astro"
 ---
@@ -452,7 +454,7 @@ const { Content } = await entry.render();
 </MarkdownPostLayout>
 ```
 
-5. Since we wrapped the content in a layout in the dynamic route, remove the `layout` definition in each post's frontmatter.
+6. Since we wrapped the content in a layout in the dynamic route, remove the `layout` definition in each post's frontmatter.
 
 ```md title="src/content/post-1.md" del={2}
 ---
@@ -463,7 +465,7 @@ pubDate: 2022-07-01
 ---
 ```
 
-6. To fetch your content, use [`getCollection`](/en/reference/api-reference/#getcollection) or [`getEntryBySlug`](/en/reference/api-reference/#getentrybyslug) instead of `Astro.glob` or `import` statements. For example, our unique tags logic becomes:
+7. To fetch your content, use [`getCollection`](/en/reference/api-reference/#getcollection) or [`getEntryBySlug`](/en/reference/api-reference/#getentrybyslug) instead of `Astro.glob` or `import` statements. For example, our unique tags logic becomes:
 
 ```js title="src/pages/tags/[tag].astro" "post.data" "getCollection(\"posts\")"
 ...
