revised final step

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -465,7 +465,9 @@ pubDate: 2022-07-01
 ---
 ```
 
-7. To fetch your content, use [`getCollection`](/en/reference/api-reference/#getcollection) or [`getEntryBySlug`](/en/reference/api-reference/#getentrybyslug) instead of `Astro.glob` or `import` statements. For example, our unique tags logic becomes:
+7. Replace `Astro.glob()` with [`getCollection()`](/en/reference/api-reference/#getcollection) to fetch content and metadata from your Markdown files. You will also need to update references to the returned post object, since you will now find your frontmatter values on the `data` property.
+
+For example, our unique tags logic becomes:
 
 ```js title="src/pages/tags/[tag].astro" "post.data" "getCollection(\"posts\")"
 ...
@@ -485,8 +487,9 @@ export async function getStaticPaths() {
 }
 ...
 ```
+
 :::note
-When used to fetch Markdown files, `Astro.glob` returns objects with a `frontmatter` property. Instead, `getCollection` and `getEntryBySlug` provide this frontmatter data on the `data` property.
+Any individual Markdown or MDX file imports should be replaced by [`getEntryBySlug()`](/en/reference/api-reference/#getentrybyslug).
 :::
 
 Our RSS route must also use `getCollection`:
