--- a/src/pages/en/guides/troubleshooting.mdx
+++ b/src/pages/en/guides/troubleshooting.mdx
@@ -139,7 +139,7 @@ In Astro, using a `<head>` tag works like any other HTML tag: it does not get mo
 
 ### An unexpected `<script>` or `<style>` is included
 
-You may notice an imported component's `<script>` or `<style>` tags included in your HTML source even if that component doesn't appear in the final output. For example, this will occur with [conditionally rendered](https://docs.astro.build/en/core-concepts/astro-components/#dynamic-html) components that are not displayed. 
+You may notice an imported component's `<script>` or `<style>` tags included in your HTML source even if that component doesn't appear in the final output. For example, this will occur with [conditionally rendered](/en/core-concepts/astro-components/#dynamic-html) components that are not displayed. 
 
 Astro's build process works on the module graph: once a component is included in the template, its `<script>` and `<style>` tags are processed, optimized, and bundled, whether it appears in the final output or not. This does not apply to scripts when the `is:inline` directive is applied.
 
