Included common gotcha on script and style import (#2510)
* Included note on script and style import 

It can be hard to track down the source of a `<script>` or  `<style>` tag if it's included from an unused import. Also, it's important to point it out, as it might be expected that "non-explicitly used" JS isn't in the final build.

* Corrected "import" to "use"

Style-script bleed does not occur if component is only imported and not used.
It does occur if component is imported and used but not rendered (or maybe better "appears in the output", since it could be physically in the output HTML but `display:none` ).

* reviewed wording

i merged suggestions! still not sure about evaluated but i'm glad i'm not alone in this uncertainty 😁 

co-authored-by: sarah11918 <sarah@rainsberger.ca>
co-authored-by: Jutanium <danjutan@gmail.com>

* "used" -> included in the template

could this be our final iteration? 😁

* included intro

co-authored-by: sarah11918 <sarah@rainsberger.ca>

* Update src/pages/en/guides/troubleshooting.mdx

Co-authored-by: Dan Jutan <danjutan@gmail.com>

* made link relative

---------

Co-authored-by: sarah11918 <sarah@rainsberger.ca>
Co-authored-by: Jutanium <danjutan@gmail.com>

--- a/src/pages/en/guides/troubleshooting.mdx
+++ b/src/pages/en/guides/troubleshooting.mdx
@@ -137,6 +137,12 @@ nodeLinker: "node-modules"
 
 In Astro, using a `<head>` tag works like any other HTML tag: it does not get moved to the top of the page or merged with the existing `<head>`. Because of this, you usually only want to include one `<head>` tag throughout a page. We recommend writing that single `<head>` and its contents in a [layout component](/en/core-concepts/layouts/).
 
+### An unexpected `<script>` or `<style>` is included
+
+You may notice an imported component's `<script>` or `<style>` tags included in your HTML source even if that component doesn't appear in the final output. For example, this will occur with [conditionally rendered](/en/core-concepts/astro-components/#dynamic-html) components that are not displayed. 
+
+Astro's build process works on the module graph: once a component is included in the template, its `<script>` and `<style>` tags are processed, optimized, and bundled, whether it appears in the final output or not. This does not apply to scripts when the `is:inline` directive is applied.
+
 ## Tips and tricks
 
 ### Debugging with `console.log()`
