i18n(zh-cn): remove x

--- a/src/pages/zh-cn/guides/cms.mdx
+++ b/src/pages/zh-cn/guides/cms.mdx
@@ -7,7 +7,7 @@ import CMSGuidesNav from '~/components/CMSGuidesNav.astro';
 
 
 
-**准备好将一个无头 CMS（Headless CMS） 连接到你的 Astro x项目了吗？** 按照我们的一个指南来集成 CMS（Content Management System，内容管理系统）。
+**准备好将一个无头 CMS（Headless CMS） 连接到你的 Astro 项目了吗？** 按照我们的一个指南来集成 CMS（Content Management System，内容管理系统）。
 
 ## CMS 指南
 
