ci: update error reference docs

--- a/src/pages/en/reference/errors/invalid-content-entry-slug-error.mdx
+++ b/src/pages/en/reference/errors/invalid-content-entry-slug-error.mdx
@@ -14,9 +14,7 @@ import DontEditWarning from '../../../../components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **InvalidContentEntrySlugError**: 
-            return `STRING(COLLECTION) → STRING(ENTRY_ID) has an invalid slug. `slug` must be a string.`;
-         (E09002)
+> `COLLECTION_NAME` → `ENTRY_ID` has an invalid slug. `slug` must be a string. (E09002)
 
 ## What went wrong?
 An entry in `src/content/` has an invalid `slug`. This field is reserved for generating entry slugs, and must be a string when present.
