--- a/src/pages/en/reference/errors/content-schema-contains-slug-error.mdx
+++ b/src/pages/en/reference/errors/content-schema-contains-slug-error.mdx
@@ -14,9 +14,7 @@ import DontEditWarning from '../../../../components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **ContentSchemaContainsSlugError**: 
-            return `A content collection schema should not contain `slug` since it is reserved for slug generation. Remove this from your COLLECTION collection schema.`;
-         (E09003)
+> A content collection schema should not contain `slug` since it is reserved for slug generation. Remove this from your `COLLECTION_NAME` collection schema. (E09003)
 
 ## What went wrong?
 A content collection schema should not contain the `slug` field. This is reserved by Astro for generating entry slugs. Remove the `slug` field from your schema, or choose a different name.
