chore: remove extra warning

--- a/src/pages/en/guides/rss.mdx
+++ b/src/pages/en/guides/rss.mdx
@@ -173,7 +173,7 @@ export async function get(context) {
 }
 ```
 
-When using glob imports with Markdown, we suggest using the `compiledContent()` helper to retrieve the rendered HTML for sanitization. This feature is **not** supported for MDX files.
+When using glob imports with Markdown, we suggest using the `compiledContent()` helper to retrieve the rendered HTML for sanitization.
 
 ```js title="src/pages/rss.xml.js" ins={2, 13}
 import rss from '@astrojs/rss';
