fix: add await Promise.all()

--- a/src/pages/en/guides/rss.mdx
+++ b/src/pages/en/guides/rss.mdx
@@ -151,7 +151,7 @@ When using content collections, you can render post contents by calling the post
 Whenever you're using HTML content in XML, we suggest using a package like [`sanitize-html`](https://www.npmjs.com/package/sanitize-html) in order to make sure that your content is properly sanitized, escaped, and encoded.
 :::
 
-```js title="src/pages/rss.xml.js" ins={2, 11, 14} "async (post)"
+```js title="src/pages/rss.xml.js" ins={2, 12, 15} "await Promise.all(" "async (post)"
 import rss from '@astrojs/rss';
 import sanitizeHtml from 'sanitize-html';
 
@@ -161,14 +161,16 @@ export async function get(context) {
     title: 'Buzz’s Blog',
     description: 'A humble Astronaut’s guide to the stars',
     site: context.site,
-    items: blog.map(async (post) => {
-      const { html } = await post.render();
-      return {
-        link: `/blog/${post.slug}/`,
-        content: sanitizeHtml(html),
-        ...post.data,
-      }
-    }),
+    items: await Promise.all(
+			blog.map(async (post) => {
+				const { html } = await post.render();
+				return {
+					link: `/blog/${post.slug}/`,
+					content: sanitizeHtml(html),
+					...post.data,
+				};
+			})
+		),
   });
 }
 ```
