chore: remove layout prop from new pages

--- a/src/content/docs/en/guides/deploy/sst.mdx
+++ b/src/content/docs/en/guides/deploy/sst.mdx
@@ -1,7 +1,7 @@
 ---
 title: Deploy your Astro Site to AWS with SST
 description: How to deploy your Astro site to AWS with SST
-layout: ~/layouts/DeployGuideLayout.astro
+type: deploy
 i18nReady: true
 ---
 
