--- a/src/pages/es/guides/deploy/sst.mdx
+++ b/src/pages/es/guides/deploy/sst.mdx
@@ -1,7 +1,7 @@
 ---
 title: Despliega tu proyecto de Astro en AWS con SST
 description: Cómo desplegar tu sitio Astro en AWS con SST
-layout: ~/layouts/DeployGuideLayout.astro
+type: deploy
 i18nReady: true
 ---
 
