--- a/src/pages/en/reference/api-reference.mdx
+++ b/src/pages/en/reference/api-reference.mdx
@@ -816,13 +816,15 @@ A string containing the raw, uncompiled body of the Markdown or MDX document.
 
 #### `render()`
 
-**Type:** `() => Promise<RenderedEntry>`
+**Type:** `() => Promise<RenderResult | RenderResultWithHtml>`
 
 A function to compile a given Markdown or MDX document for rendering. This returns the following properties:
 
 - `<Content />` - A component used to render the document's contents in an Astro file.
 - `headings` - A generated list of headings, [mirroring Astro's `getHeadings()` utility](/en/guides/markdown-content/#exported-properties) on Markdown and MDX imports.
 - `remarkPluginFrontmatter ` - The modified frontmatter object after any [remark or rehype plugins have been applied](/en/guides/markdown-content/#modifying-frontmatter-programmatically). Set to type `any`.
+- **(Markdown only)** `html` - The rendered HTML string, [mirroring Astro's `compiledContent()` utility](/en/guides/markdown-content/#exported-properties).
+
 
 ```astro
 ---
