--- a/src/pages/fr/guides/cms.mdx
+++ b/src/pages/fr/guides/cms.mdx
@@ -17,19 +17,19 @@ Notez que plusieurs de ces pages sont des **ébauches**: ce sont des collections
 
 ## Pourquoi utiliser un CMS?
 
-Une Système de Gestion de Contenu vous permettez écrire du contenu et gérer les actifs hors de votre projet Astro.
+Un Système de Gestion de Contenu vous permet d'écrire du contenu et de gérer les actifs en dehors de votre projet Astro.
 
-Cela ouvre de nouvelles fonctionnalités pour travailler avec du contenu. La plupart des CMSes vous donnent un éditeur de contenu visuel, la possibilité de spécifier des types de contenu standard et un moyen de collaborer avec d'autres.
+Cela ouvre de nouvelles fonctionnalités pour travailler avec du contenu. La plupart des CMS vous donnent un éditeur de contenu visuel, la possibilité de spécifier des types de contenu standard et un moyen de collaborer avec d'autres.
 
-Un CMS peut être utile pour un contenu qui suit un structure particulière, vous donnant souvent une expérience similaire à un tableau de bord et des outils d'édition WYSIWYG. Vous pouvez utiliser un CMS pour écrire des billets de blog en utilisant l'éditeur de texte riche d'un CMS au lieu de fichiers Markdown. Ou vous pouvez utiliser un CMS pour mantenir des listes de produits pour un magasin de commerce électronique, rendant champs requis pour éviter les inscriptions incomplètes.
+Un CMS peut être utile pour un contenu qui suit un structure particulière, vous donnant souvent une expérience similaire à un tableau de bord et des outils d'édition WYSIWYG. Vous pouvez utiliser un CMS pour écrire des billets de blog en utilisant l'éditeur de texte riche d'un CMS au lieu de fichiers Markdown. Ou vous pourriez utiliser un CMS pour maintenir les listes de produits pour une boutique en ligne, en rendant certains champs obligatoires pour éviter des annonces incomplètes.
 
-Votre projet Astro peut alors récuperer votre contenu de votre CMS et l'afficher, où et vous le souhaitez sur votre site.
+Votre projet Astro peut alors récuperer votre contenu de votre CMS et l'afficher, où et comment vous le souhaitez sur votre site.
 
 ## Quels CMS fonctionnent bien avec Astro?
 
-Parce qu'Astro s'occupe de la _présentation_ de votre contenu, vous devrez choisir un CMS _headless_ comme ceux de la liste ci-dessus. Cela signifie que le CMS vous aide à écrire votre contenu, mais ne génère pas un site qui l'affiche. Au lieu de cela, vous récupérez les données de contenu et les utilisez dans votre projet Astro.
+Parce qu'Astro s'occupe de la _présentation_ de votre contenu, vous voudrez choisir un CMS _headless_ (découplé) comme ceux de la liste ci-dessus. Cela signifie que le CMS vous aide à écrire votre contenu, mais ne génère pas un site qui l'affiche. Au lieu de cela, vous récupérez les données de contenu et les utilisez dans votre projet Astro.
 
-Certains CMSes headless, comme Storyblok, fournissent une [intégration](/fr/guides/integrations-guide) d'Astro qui aide à récupérer le contenu spécifiquement pour un site Astro. D'autres fournissent un SDK JavaScript, une bibliothèque que vous installez et utilisez pour récupérer votre contenu distant.
+Certains CMS headless, comme Storyblok, fournissent une [intégration](/fr/guides/integrations-guide/) d'Astro qui aide à récupérer le contenu spécifiquement pour un site Astro. D'autres fournissent un SDK JavaScript, une bibliothèque que vous installez et utilisez pour récupérer votre contenu distant.
 
 ## Puis-je utiliser Astro sans un CMS?
 
