--- a/src/pages/en/reference/api-reference.mdx
+++ b/src/pages/en/reference/api-reference.mdx
@@ -831,7 +831,7 @@ A function to compile a given Markdown or MDX document for rendering. This retur
 import { getEntryBySlug } from 'astro:content';
 const entry = await getEntryBySlug('blog', 'entry-1.md');
 
-const { Content, headings, remarkPluginFrontmatter } = await entry.render();
+const { Content, headings, remarkPluginFrontmatter, html } = await entry.render();
 ---
 ```
 
