--- a/src/pages/en/guides/deploy/cloudflare.mdx
+++ b/src/pages/en/guides/deploy/cloudflare.mdx
@@ -115,7 +115,7 @@ There are currently two modes supported when using Pages Functions with the [`@a
 
     If no mode is set, the default  is `"advanced"`.
 
-2. **directory** mode: This mode is used when you want to run your function in `directory` mode, which means the adapter will compile the client side part of you app the same way, but it will move the worker script into a `functions` folder in the project root. The adaptor will only ever place a `[[path]].js` in that folder, allowing you to add additional plugins and pages middleware which can be checked into version control.
+2. **directory** mode: This mode is used when you want to run your function in `directory` mode, which means the adapter will compile the client side part of your app the same way, but it will move the worker script into a `functions` folder in the project root. The adaptor will only ever place a `[[path]].js` in that folder, allowing you to add additional plugins and pages middleware which can be checked into version control.
 
     ```ts title="astro.config.mjs" "directory"
     export default defineConfig({
