Update `github.mdx` & `cloudflare.mdx` translations

--- a/src/pages/pt-br/guides/deploy/github.mdx
+++ b/src/pages/pt-br/guides/deploy/github.mdx
@@ -96,7 +96,7 @@ O Astro mantém oficialmente o `withastro/action` para fazer o deploy do seu pro
 
 3. No GitHub, vá para a aba **Settings** do seu repositório e encontre a seção **Pages** das configurações.
 
-4. Escolha **GitHub Actions** como a **Source** do seu site e aperte **Save**.
+4. Escolha **GitHub Actions** como a **Source** do seu site.
 
 5. Faça o commit do novo arquivo de workflow e faça push para o GitHub.
 
