Update error message

--- a/src/pages/pt-br/reference/errors/content-schema-contains-slug-error.mdx
+++ b/src/pages/pt-br/reference/errors/content-schema-contains-slug-error.mdx
@@ -5,7 +5,7 @@ i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 ---
 
-> **ContentSchemaContainsSlugError**: O esquema de uma coleção de conteúdo não deve conter `slug` já que é reservado para a geração de slugs. Remova-o do esquema da sua coleção de conteúdo. (E09003)
+> O esquema de uma coleção de conteúdo não deve conter `slug` já que é reservado para a geração de slugs. Remova-o do esquema da coleção `NOME_COLEÇÃO`. (E09003)
 
 ## O que deu errado?
 
