Apply quick suggestions from code review
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -434,7 +434,16 @@ export const collections = {
 If your editor doesn't recognize `astro:content`, make sure you're on the latest version of Astro and try restarting the dev server. 
 :::
 
-5. To [generate routes](/en/guides/content-collections/#generating-routes-from-content), create a `.astro` page with a [dynamic route](/en/core-concepts/routing/#dynamic-routes) in `src/pages/posts` to [query and render your content](#querying-collections). Our tutorial blog uses the static output mode, so we'll use `getStaticPaths()` to create a route for each post:
+
+:::note
+Inside a collection, Markdown and MDX files no longer automatically create pages using Astro's [file-based routing inside `src/pages/`](/en/guides/markdown-content/#file-based-routing). You will need to [generate routes from your collections](/en/guides/content-collections/#generating-routes-from-content) yourself.
+:::
+
+5. Create a `src/pages/posts/[...slug].astro`. This page will use [dynamic routing](/en/core-concepts/routing/#dynamic-routes) to generate a page for each collection entry. 
+
+This page will also need to [query your collection](#querying-collections) to fetch page slugs and make the page content available to each route.
+
+Render your post `<Content />` within the layout for your Markdown or MDX pages, since they can no longer rely on the `layout` frontmatter property to specify their own layout.
 
 ```astro title="src/pages/posts/[...slug].astro"
 ---
@@ -494,7 +503,7 @@ export async function getStaticPaths() {
 Any individual Markdown or MDX file imports should be replaced by [`getEntryBySlug()`](/en/reference/api-reference/#getentrybyslug).
 :::
 
-Our RSS route must also use `getCollection`:
+The tutorial blog project also includes creating an RSS feed. This file must also use `getCollection` and use the `data` object:
 
 ```js title="src/pages/rss.xml.js" {5, 10-15} 
 import rss from "@astrojs/rss";
