--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -478,7 +478,7 @@ pubDate: 2022-07-01
 
 7. Replace `Astro.glob()` with [`getCollection()`](/en/reference/api-reference/#getcollection) to fetch content and metadata from your Markdown files. You will also need to update references to the returned post object, since you will now find your frontmatter values on the `data` property.
 
-For example, our unique tags logic becomes:
+For example, the tutorial blog project dynamically generates a page for each tag. This page now becomes:
 
 ```js title="src/pages/tags/[tag].astro" "post.data" "getCollection(\"posts\")"
 ...
