--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -443,7 +443,7 @@ Inside a collection, Markdown and MDX files no longer automatically create pages
 
 This page will also need to [query your collection](#querying-collections) to fetch page slugs and make the page content available to each route.
 
-Render your post `<Content />` within the layout for your Markdown or MDX pages, since they can no longer rely on the `layout` frontmatter property to specify their own layout.
+Render your post `<Content />` within the layout for your Markdown or MDX pages. This allows you to specify a common layout for all of your posts.
 
 ```astro title="src/pages/posts/[...slug].astro"
 ---
@@ -465,7 +465,7 @@ const { Content } = await entry.render();
 </MarkdownPostLayout>
 ```
 
-6. Since we wrapped the content in a layout in the dynamic route, remove the `layout` definition in each post's frontmatter.
+6. Now that you wrapped your content in a layout, remove the `layout` definition in each individual post's frontmatter. 
 
 ```md title="src/content/post-1.md" del={2}
 ---
