i18n(pt-BR): Add `sst.mdx` translation plus more small updates

--- a/src/pages/pt-br/guides/configuring-astro.mdx
+++ b/src/pages/pt-br/guides/configuring-astro.mdx
@@ -70,7 +70,7 @@ Você também pode providenciar manualmente as definições de tipo para o VSCod
 
 ```js
 // astro.config.mjs
-export default /** @type {import('astro').AstroUserConfig} */ ({
+export default /** @type {import('astro').AstroUserConfig} */ {
   // Seu arquivo de configuração aqui...
   // https://docs.astro.build/pt-br/reference/configuration-reference/
 }
