--- a/src/pages/pt-br/guides/troubleshooting.mdx
+++ b/src/pages/pt-br/guides/troubleshooting.mdx
@@ -137,6 +137,12 @@ nodeLinker: "node-modules"
 
 No Astro, utilizar uma tag `<head>` funciona como qualquer outra tag HTML: ela não é movida para o topo da página ou combinada com a `<head>` existente. Por causa disso, você geralmente apenas quer incluir uma tag `<head>` pela a página. Nós recomendamos escrever aquela única `<head>` e seus conteúdos em um [componente de layout](/pt-br/core-concepts/layouts/).
 
+### Um `<script>` ou `<style>` inesperado foi incluído
+
+Você pode notar as tags `<script>` ou `<style>` de um componente importado no seu código-fonte HTML mesmo que o componente não apareça no resultado final. Por exemplo, isso irá ocorrer com componentes [renderizados condicionalmente](/pt-br/core-concepts/astro-components/#html-dinâmico) que não são mostrados. 
+
+O processo de build do Astro trabalha no gráfico de módulos: assim que um componente é incluído no template, suas tags `<script>` e `<style>` são processadas, otimizadas e passam por bundle, independente de aparecer no resultado final ou não. Isso não se aplica a scripts quando a diretiva `is:inline` é aplicada.
+
 ## Dicas e truques
 
 ### Depurando com `console.log()`
