--- a/src/pages/pt-br/reference/publish-to-npm.mdx
+++ b/src/pages/pt-br/reference/publish-to-npm.mdx
@@ -263,7 +263,7 @@ Compartilhe o seu trabalho árduo adicionando sua integração a nossa [bibliote
 
 ### Dados do `package.json` 
 
-A biblioteca é automaticamente atualizada toda noite, puxando cada pacote publicado no NPM com a palavra-chave `astro-component`.
+A biblioteca é automaticamente atualizada toda noite, puxando cada pacote publicado no NPM com a palavra-chave `astro-component` ou `withastro`.
 
 A biblioteca de integrações lê os dados `name`, `description`, `repository` e `homepage` do seu `package.json`.
 
@@ -289,4 +289,3 @@ Em adição a palavra-chave obrigatória `astro-component` ou `withastro`, palav
 ## Compartilhe
 
 Nós incentivamos que você compartilhe o seu trabalho, assim como amamos ver o que nossos talentosos Astronautas criaram. Venha e compartilhe o que você criou conosco em nosso [Discord](https://astro.build/chat/) ou mencione [@astrodotbuild](https://twitter.com/astrodotbuild) em um Tweet!
-
